# TORCH_Data_Processor

./: .gitignore  CMakeLists.txt  Config.xml  Example_Config.xml  README.md  makefile  run_test.sh
Abstractions/: cmakelist.cmake
Abstractions/inc/: BoardIdentifier.hpp  ChannelMappings.hpp  Edge.hpp  EdgeModifiers.hpp  Event.hpp  Packet.hpp  PolarityModifiers.hpp  ReadoutIdentifier.hpp  WordBundle.hpp
Abstractions/src/: BoardIdentifier.cpp  ChannelMappings.cpp  Edge.cpp  EdgeModifiers.cpp  Event.cpp  Packet.cpp  ReadoutIdentifier.cpp  WordBundle.cpp
Core/: cmakelist.cmake
Core/inc/: BinaryDecoding.hpp  Config.hpp  Debug.hpp  ErrorCounter.hpp  ErrorCounter.inl  ErrorSpy.hpp  FileReader.hpp  InputFile.hpp  ModesEnum.hpp  Processor.hpp  RootManager.hpp
Core/src/: Config.cpp  ErrorCounter.cpp  ErrorSpy.cpp  FileReader.cpp  InputFile.cpp  Processor.cpp  RootManager.cpp  main.cpp
DataStructures/: cmakelist.cmake
DataStructures/inc/: ThreadSafeEventMap.hpp  ThreadSafeQueue.hpp  ThreadSafeQueue.inl
DataStructures/src/: ThreadSafeEventMap.cpp  ThreadSafeQueue.cpp
Documentation/: config
Documentation/html/: _binary_decoding_8hpp.html  _binary_decoding_8hpp_source.html  _board_identifier_8cpp.html  _board_identifier_8hpp.html  _board_identifier_8hpp_source.html  _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _channel_histo_8cxx.html  _channel_mappings_8cpp.html  _channel_mappings_8hpp.html  _channel_mappings_8hpp_source.html  _config_8cpp.html  _config_8hpp.html  _config_8hpp_source.html  _debug_8hpp.html  _debug_8hpp_source.html  _edge_8cpp.html  _edge_8hpp.html  _edge_8hpp_source.html  _edge_modifiers_8cpp.html  _edge_modifiers_8hpp.html  _edge_modifiers_8hpp_source.html  _error_counter_8cpp.html  _error_counter_8hpp.html  _error_counter_8hpp_source.html  _error_counter_8inl.html  _error_spy_8cpp.html  _error_spy_8hpp.html  _error_spy_8hpp_source.html  _event_8cpp.html  _event_8hpp.html  _event_8hpp_source.html  _event_tree_manager_8cpp.html  _event_tree_manager_8hpp.html  _event_tree_manager_8hpp_source.html  _file_reader_8cpp.html  _file_reader_8hpp.html  _file_reader_8hpp_source.html  _input_file_8cpp.html  _input_file_8hpp.html  (+144 more)
Documentation/latex/: _binary_decoding_8hpp.tex  _board_identifier_8cpp.tex  _board_identifier_8hpp.tex  _c_make_c_compiler_id_8c.tex  _c_make_c_x_x_compiler_id_8cpp.tex  _channel_histo_8cxx.tex  _channel_mappings_8cpp.tex  _channel_mappings_8hpp.tex  _config_8cpp.tex  _config_8hpp.tex  _debug_8hpp.tex  _edge_8cpp.tex  _edge_8hpp.tex  _edge_modifiers_8cpp.tex  _event_8cpp.tex  (+89 more)
Root/: cmakelist.cmake
inc/: Config.hpp  Debug.hpp  Event.hpp  GlobalConfig.hpp  Packet.hpp  Processor.hpp  RootManager.hpp
macros/: ChannelHisto.cxx  Make2MCPHitmap.cxx  MakeChannelHisto.cxx  MakeHitmap.cxx
scripts/: MakeFileList.py
src/: Config.cpp  Edge.cpp  Event.cpp  GlobalConfig.cpp  Processor.cpp  RootManager.cpp  main.cpp
(+148 files in other folders)
